--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <jdk.version>1.8</jdk.version>
         <junit.version>4.11</junit.version>
         <jarname>zipper</jarname>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.basedir>${project.basedir}</main.basedir>
     </properties>
 
