--- a/pom.xml
+++ b/pom.xml
@@ -11,22 +11,28 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <junit.version>4.11</junit.version>
-        <jarname>zipper</jarname>
+        <jarName>zipper</jarName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.basedir>${project.basedir}</main.basedir>
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
+        <!-- core compress utility -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>1.14</version>
         </dependency>
+        <!-- cli module -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
-        <finalName>${jarname}</finalName>
+        <finalName>${jarName}</finalName>
         <plugins>
             <!-- maven-compiler-plugin -->
             <plugin>
