file signature verification

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>commons-cli</artifactId>
             <version>1.3</version>
         </dependency>
+        <!-- guava for multi maps -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
