--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
         </dependency>
-
+        <!-- common io-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
